@startuml
class Fournisseur {
	**id : int**
	nom : string
	email : string
	telephone : string
}

class Contact {
	**id : int**
	objet : string
	email : string
	message : string
}

class SousCategorie {
	**id : int**
	nom : string
	image : string
	<color:#0000dd>Categorie : Categorie</color>
	<color:#0000dd>produits : Produit[]</color>
}

class Categorie {
	**id : int**
	nom : string
	<color:#0000dd>sousCategories : SousCategorie[]</color>
}

class Client {
	**id : int**
	nom : string
	prenom : string
	email : string
	password : string
	IsVerified : bool
	adresse : string
	codePostal : string
	ville : string
}

class Produit {
	**id : int**
	nom : string
	description : string
	ref_fournisseur : string
	prix_achat : string
	image : string
	stock : int
	actif : bool
	<color:#0000dd>sousCategorie : SousCategorie</color>
}

class Commerciaux {
	**id : int**
	nom : string
	prenom : string
	email : string
	telephone : string
}

SousCategorie "*"--"1" Categorie
SousCategorie "1"--"*" Produit


hide methods

hide circle

@enduml
